--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                             var message = `Нове замовлення:\nІм'я та прізвище: ${name}\nТелефон: ${phone};`
                         
                             var token = '7513377101:AAGz81d_4M-ghq96NhNIVe6YVG-7JEhBips'; // Ваш токен та ID чату
-                            var chatId =  565734465; // Замініть YOUR_CHAT_ID на ваш реальний ID чату
+                            var chatId =  -4537596776; // Замініть YOUR_CHAT_ID на ваш реальний ID чату
                         
                             fetch('https://api.telegram.org/bot' + token + '/sendMessage', {
                                 method: 'POST',
